--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,19 +13,7 @@
 
 
 <h2>Add a comment:</h2>
-<%= form_for([ @article, @article.comments.build ]) do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
 
 
 <%= link_to 'Article List', articles_path %>
